TEBuildOrg-Project/force-app/main/default/objects/Resource__c/fields/Default_Role__c.field-meta.xml
<CustomField>
    <fullName>Default_Role__c</fullName>
    <label>Default Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>