TEBuildOrg-Project/force-app/main/default/objects/Resource__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Employee Email Address</description>
    <externalId>true</externalId>
    <label>Email</label>
    <type>Email</type>
</CustomField>