TEBuildOrg-Project/force-app/main/default/objects/Resource__c/fields/Resource_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Resource_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Hierarchy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>