TEBuildOrg-Project/force-app/main/default/objects/Resource__c/fields/ResourceUser__c.field-meta.xml
<CustomField>
    <fullName>ResourceUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This custom field help to identify the resource record for logged in user.</description>
    <label>Resource User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResourcesUser</relationshipName>
    <type>Lookup</type>
</CustomField>