TEBuildOrg-Project/force-app/main/default/objects/Resource__c/listViews/Resource_Details.listView-meta.xml
<ListView>
    <fullName>Resource_Details</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Default_Role__c</columns>
    <columns>Resource_Hierarchy__c</columns>
    <filterScope>Mine</filterScope>
    <label>Resource Details</label>
</ListView>